--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script>
-            window.location = "./inicial/index.html";
+            window.location = "PORTF/inicial/index.html";
         </script>
     </body>
 </html>
