--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -30,7 +30,7 @@
                 <div class="container">
 
                     <div class="caixa">
-                        <img src="/fotos/aids.png" alt="atividade 1">
+                        <img src="../fotos/aids.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="caixa">
-                        <img src="/fotos/quiz.png" alt="atividade 2">
+                        <img src="../fotos/quiz.png" alt="atividade 2">
                         <div class="descricao">
                             <h4>Atividade 2</h4>
                             <p>
