--- a/PORTF/mtm/index.html
+++ b/PORTF/mtm/index.html
@@ -30,7 +30,7 @@
                 <div class="container">
                     <!-- Exemplo de caixa -->
                     <div class="caixa">
-                        <img src="/fotos/eletro.png" alt="atividade 1">
+                        <img src="../fotos/eletro.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
@@ -44,7 +44,7 @@
                     </div>
                     <!-- Adicione mais caixas livremente -->
                     <div class="caixa">
-                        <img src="/fotos/eletro.png" alt="atividade 1">
+                        <img src="../fotos/eletro.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
