--- a/PORTF/natureza/index.html
+++ b/PORTF/natureza/index.html
@@ -30,7 +30,7 @@
                 <div class="container">
 
                     <div class="caixa">
-                        <img src="/fotos/atv2.png" alt="atividade 2">
+                        <img src="../fotos/atv2.png" alt="atividade 2">
                         <div class="descricao">
                             <h4>Apresentação sobre os tipos de poluição.</h4>
                             <p>
@@ -44,7 +44,7 @@
                     </div>
            
                     <div class="caixa">
-                        <img src="/fotos/eletro.png" alt="atividade 1">
+                        <img src="../fotos/eletro.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Mapa mental de Eletrostática</h4>
                             <p>
@@ -58,7 +58,7 @@
                     </div>
                
                     <div class="caixa">
-                        <img src="/fotos/333.png" alt="atividade 3">
+                        <img src="../fotos/333.png" alt="atividade 3">
                         <div class="descricao">
                             <h4>Relatório sobre Estequiometria</h4>
                             <p>
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="caixa">
-                        <img src="/fotos/este.png" alt="atividade 4">
+                        <img src="../fotos/este.png" alt="atividade 4">
                         <div class="descricao">
                             <h4>Atividade Autoral</h4>
                             <p>
