--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -29,7 +29,7 @@
                 <div class="p1texto"><h2>1º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
-                        <img src="/fotos/red.png" alt="atividade 1">
+                        <img src="../fotos/red.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="caixa">
-                        <img src="/fotos/vozes.png" alt="atividade 2">
+                        <img src="../fotos/vozes.png" alt="atividade 2">
                         <div class="descricao">
                             <h4>Atividade 2</h4>
                             <p>
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="caixa">
-                        <img src="/fotos/red.png" alt="atividade 1">
+                        <img src="../fotos/red.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="caixa">
-                        <img src="/fotos/red.png" alt="atividade 1">
+                        <img src="../fotos/red.png" alt="atividade 1">
                         <div class="descricao">
                             <h4>Atividade 1</h4>
                             <p>
