--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -47,44 +47,87 @@
                             <h4>Atividade 2</h4>
                             <p>
                                 <b>Assunto:</b> Site memórias Póstumas de Brás Cubas. <br>
-                                <b>Objetivo:</b> Criar um mapa mental sobre eletrostática com objetivo de entender os conceitos básicos e suas aplicações. <br>
-                                <b>Crítica Pessoal:</b> Uma atividade simples de se fazer, uma opinião neutra sobre a realização desta. <br>
-                                <b>Habilidades:</b>  C1 - H1, H2 e H4. <br>
+                                <b>Objetivo:</b> Criar um site no Google Sites e criar uma revista literária. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade um tanto que intrigante e por fato realmente interessante gostei dos livros sugeridos. <br>
+                                <b>Habilidades:</b>  H4/H24. <br>
                                 <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
                     </div>
 
                     <div class="caixa">
-                        <img src="../fotos/red.png" alt="atividade 1">
+                        <img src="../fotos/bras.png" alt="atividade 3">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                            <h4>Atividade 3</h4>
                             <p>
-                                <b>Assunto:</b> Red1000. <br>
-                                <b>Objetivo:</b> Criar um mapa mental sobre eletrostática com objetivo de entender os conceitos básicos e suas aplicações. <br>
-                                <b>Crítica Pessoal:</b> Uma atividade simples de se fazer, uma opinião neutra sobre a realização desta. <br>
-                                <b>Habilidades:</b>  Não Informada. <br>
+                                <b>Assunto:</b> Comentario de Brás Cubas. <br>
+                                <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
+                                <b>Crítica Pessoal:</b> Bons livros apesar do meu leve desinteresse, mas ainda assim consegui extrair algumas reflexões valiosas. <br>
+                                <b>Habilidades:</b> H17. <br>
+                                <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
                     </div>
 
                     <div class="caixa">
-                        <img src="../fotos/red.png" alt="atividade 1">
+                        <img src="../fotos/parque.png" alt="atividade 3">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                            <h4>Atividade 3</h4>
                             <p>
-                                <b>Assunto:</b> Red1000. <br>
-                                <b>Objetivo:</b> Criar um mapa mental sobre eletrostática com objetivo de entender os conceitos básicos e suas aplicações. <br>
-                                <b>Crítica Pessoal:</b> Uma atividade simples de se fazer, uma opinião neutra sobre a realização desta. <br>
-                                <b>Habilidades:</b>  Não Informada. <br>
+                                <b>Assunto:</b> Comentario de Parque Industrial. <br>
+                                <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
+                                <b>Crítica Pessoal:</b> Bons livros apesar do meu leve desinteresse, mas ainda assim consegui extrair algumas reflexões valiosas. <br>
+                                <b>Habilidades:</b> H17. <br>
+                                <b><a href="https://sites.google.com/estudante.sesisenai.org.br/vozes-criativas/p%C3%A1gina-de-servi%C3%A7o">Site</a></b>
                             </p>
                         </div>
                     </div>
 
+                    <div class="caixa">
+                        <img src="../fotos/capal.png" alt="atividade 4">
+                        <div class="descricao">
+                            <h4>Atividade 4</h4>
+                            <p>
+                                <b>Assunto:</b> Atividade Pai contra Mãe. <br>
+                                <b>Objetivo:</b> Reescrever a história do ponto de vista da mãe. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade bem complexa, sinceramente não gostei de fazer. <br>
+                                <b>Habilidades:</b>  Não informado. <br>
+                                <b><a href="https://docs.google.com/document/d/1bcVuhK-LGxjdWN_woOG8f-g2MgmkGNei5hoB-hezOlM/edit?usp=sharing">docs</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/biografia.png" alt="atividade 5">
+                        <div class="descricao">
+                            <h4>Atividade 5</h4>
+                            <p>
+                                <b>Assunto:</b> Biografia Profissional. <br>
+                                <b>Objetivo:</b> Criar uma Biografia Profissional com nossa foto. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade um tanto que entendiante e simples. <br>
+                                <b>Habilidades:</b>  H22. <br>
+                                <b><a href="https://www.canva.com/design/DAGlZYZjs94/_uhtaLeXwkLo8hQWFvG7KA/edit?utm_content=DAGlZYZjs94&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/enems.png" alt="atividade 6">
+                        <div class="descricao">
+                            <h4>Atividade 6</h4>
+                            <p> 
+                                <b>Assunto:</b> Atividade Site Informa ENEM. <br>
+                                <b>Objetivo:</b> Criar um Google Sites para reunir diversas fontes. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade bem complexa, porém divertida de fazer. <br>
+                                <b>Habilidades:</b>  H23. <br>
+                                <b><a href="https://sites.google.com/estudante.sesisenai.org.br/informa-enem-22/in%C3%ADcio">Site</a></b>
+                            </p>
+                        </div>
+                    </div>
                     
                 </div>
 
-                <!-- 2º e 3º trimestres seguem igual -->
+                
                 <div class="p1texto"><h2>2º Trimestre</h2></div>
                 <div class="container">
                     <div class="caixa">
