--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Diego</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,7 +33,7 @@
                     <div class="caixa">
                         <img src="../fotos/aids.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
                             <p>
                                 <b>Assunto:</b> Geopolítica e Relações Internacionais. <br>
                                 <b>Objetivo:</b> Criar uma apresentação sobre um dos organismos escolhidos e realizar um apresentação com os tópicos devidamente selecionados. <br>
@@ -46,7 +47,7 @@
                     <div class="caixa">
                         <img src="../fotos/quiz.png" alt="atividade 2">
                         <div class="descricao">
-                            <h4>Atividade 2</h4>
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
                             <p>
                                 <b>Assunto:</b> Quiz Imperialismo dos EUA. <br>
                                 <b>Objetivo:</b> Criar um quiz sobre o imperialismo dos estados unidos de 10 questões. <br>
