--- a/PORTF/linguas/index.html
+++ b/PORTF/linguas/index.html
@@ -31,7 +31,7 @@
                     <div class="caixa">
                         <img src="../fotos/red.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
                             <p>
                                 <b>Assunto:</b> Red1000. <br>
                                 <b>Objetivo:</b> Fazer uma redação dissertativa na norma ENEM. <br>
@@ -44,7 +44,7 @@
                     <div class="caixa">
                         <img src="../fotos/vozes.png" alt="atividade 2">
                         <div class="descricao">
-                            <h4>Atividade 2</h4>
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
                             <p>
                                 <b>Assunto:</b> Site memórias Póstumas de Brás Cubas. <br>
                                 <b>Objetivo:</b> Criar um site no Google Sites e criar uma revista literária. <br>
@@ -58,7 +58,7 @@
                     <div class="caixa">
                         <img src="../fotos/bras.png" alt="atividade 3">
                         <div class="descricao">
-                            <h4>Atividade 3</h4>
+                        <div class="atv"> <h4>Atividade 3</h4> </div>
                             <p>
                                 <b>Assunto:</b> Comentario de Brás Cubas. <br>
                                 <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
@@ -72,7 +72,7 @@
                     <div class="caixa">
                         <img src="../fotos/parque.png" alt="atividade 3">
                         <div class="descricao">
-                            <h4>Atividade 3</h4>
+                        <div class="atv"> <h4>Atividade 3</h4> </div>
                             <p>
                                 <b>Assunto:</b> Comentario de Parque Industrial. <br>
                                 <b>Objetivo:</b> Fazer um comentario sobre o livro Memórias Póstumas de Brás Cubas. <br>
@@ -86,7 +86,7 @@
                     <div class="caixa">
                         <img src="../fotos/capal.png" alt="atividade 4">
                         <div class="descricao">
-                            <h4>Atividade 4</h4>
+                        <div class="atv"> <h4>Atividade 4</h4> </div>
                             <p>
                                 <b>Assunto:</b> Atividade Pai contra Mãe. <br>
                                 <b>Objetivo:</b> Reescrever a história do ponto de vista da mãe. <br>
@@ -100,7 +100,7 @@
                     <div class="caixa">
                         <img src="../fotos/biografia.png" alt="atividade 5">
                         <div class="descricao">
-                            <h4>Atividade 5</h4>
+                        <div class="atv"> <h4>Atividade 5</h4> </div>
                             <p>
                                 <b>Assunto:</b> Biografia Profissional. <br>
                                 <b>Objetivo:</b> Criar uma Biografia Profissional com nossa foto. <br>
@@ -114,7 +114,7 @@
                     <div class="caixa">
                         <img src="../fotos/enems.png" alt="atividade 6">
                         <div class="descricao">
-                            <h4>Atividade 6</h4>
+                        <div class="atv"> <h4>Atividade 6</h4> </div>
                             <p> 
                                 <b>Assunto:</b> Atividade Site Informa ENEM. <br>
                                 <b>Objetivo:</b> Criar um Google Sites para reunir diversas fontes. <br>
