--- a/PORTF/mtm/index.html
+++ b/PORTF/mtm/index.html
@@ -32,7 +32,7 @@
                     <div class="caixa">
                         <img src="../fotos/quebra.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
                             <p>
                                 <b>Assunto:</b> Quebrando a Banca(FILME). <br>
                                 <b>Objetivo:</b> Responder algumas perguntas sobre o filme e escrever um pequeno roteiro sobre um filme de probalidade. <br>
@@ -46,7 +46,7 @@
                     <div class="caixa">
                         <img src="../fotos/jogo-mtm.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
                             <p>
                                 <b>Assunto:</b> Jogo(Quebrando a Banca). <br>
                                 <b>Objetivo:</b> Desenvolver um jogo original utilizando os conceitos de análise combinatória, inspirado no filme Quebrando a Banca. <br>
