--- a/PORTF/natureza/index.html
+++ b/PORTF/natureza/index.html
@@ -32,7 +32,7 @@
                     <div class="caixa">
                         <img src="../fotos/atv2.png" alt="atividade 2">
                         <div class="descricao">
-                            <h4>Apresentação sobre os tipos de poluição.</h4>
+                        <div class="atv"> <h4>Apresentação sobre os tipos de poluição.</h4> </div>
                             <p>
                                 <b>Assunto:</b> Tipos de poluição. <br>
                                 <b>Objetivo:</b> Fazer uma apresentação sobre um tipo específico de poluição apresentando impactos, situação atual e etc. <br>
@@ -46,7 +46,7 @@
                     <div class="caixa">
                         <img src="../fotos/eletro.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Mapa mental de Eletrostática</h4>
+                        <div class="atv"> <h4>Mapa mental de Eletrostática.</h4> </div>
                             <p>
                                 <b>Assunto:</b> Eletrostática. <br>
                                 <b>Objetivo:</b> Criar um mapa mental sobre eletrostática com objetivo de entender os conceitos básicos e suas aplicações. <br>
@@ -60,7 +60,7 @@
                     <div class="caixa">
                         <img src="../fotos/333.png" alt="atividade 3">
                         <div class="descricao">
-                            <h4>Relatório sobre Estequiometria</h4>
+                    <div class="atv"> <h4>Relatório sobre Estequiometria.</h4> </div>
                             <p>
                                 <b>Assunto:</b> Relatório sobre Estequiometria e a Indústria Brasileira. <br>
                                 <b>Objetivo:</b> Atividade não realizada ainda. <br>
@@ -74,7 +74,7 @@
                     <div class="caixa">
                         <img src="../fotos/este.png" alt="atividade 4">
                         <div class="descricao">
-                            <h4>Atividade Autoral</h4>
+                        <div class="atv"> <h4>Atividade Autoral.</h4> </div>
                             <p>
                                 <b>Assunto:</b> Estequiometria. <br>
                                 <b>Objetivo:</b> Fazer um vídeo-apresentação de estequiometria e entregar ao professor. <br>
