--- a/PORTF/tecnico/index.html
+++ b/PORTF/tecnico/index.html
@@ -32,7 +32,7 @@
                     <div class="caixa">
                         <img src="../fotos/xxx.png" alt="atividade xxx">
                         <div class="descricao">
-                            <h4>Atividade xxx</h4>
+                        <div class="atv"> <h4>Atividade xxx</h4> </div>
                             <p>
                                 <b>Assunto:</b> xxx. <br>
                                 <b>Objetivo:</b> xxx. <br>
@@ -51,7 +51,7 @@
                     <div class="caixa">
                         <img src="../fotos/hamburgue.png" alt="atividade 1">
                         <div class="descricao">
-                            <h4>Atividade 1</h4>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
                             <p>
                                 <b>Assunto:</b> Requisitos Hamburgueria. <br>
                                 <b>Objetivo:</b> Criar Requisitos funcionais, não funcionais e regras negocios para a hamburgueria, garantindo que todos os aspectos do negócio sejam cobertos. <br>
@@ -64,7 +64,7 @@
                     <div class="caixa">
                         <img src="../fotos/smart.png" alt="atividade 2">
                         <div class="descricao">
-                            <h4>Atividade 2</h4>
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
                             <p>
                                 <b>Assunto:</b> Smart-Sitter (SA). <br>
                                 <b>Objetivo:</b> A SmartSitter é mais que uma solução de mercado, é o caminho para uma conexão entre pais e filhos
