--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -63,12 +63,33 @@
 
                 <div class="p1texto"><h2>2º Trimestre</h2></div>
                 <div class="container">
-                    <div class="caixa">
+                <div class="caixa">
+                    <img src="../fotos/Saotome.png" alt="atividade 2">
                         <div class="descricao">
-                            <h4>Em breve</h4>
-                            <p>Sem nada aqui ainda :]</p>
+                        <div class="atv"> <h4>Atividade 1</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Fim da 2ª Guerra Mundial e Descolonização da África e da Ásia. <br>
+                                <b>Objetivo:</b> Escolher um país da África ou da Ásia que tenha se tornado independente entre 1940 e 1970 e responder as questões sobre o país escolhido. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade divertida e simples de se realizar. <br>
+                                <b>Habilidades:</b>  H30 - H39 - H40. <br>
+                                <b><a href="https://www.canva.com/design/DAGwnkKreEs/x07mkiQkUCfYXtxlhjGTfQ/edit?utm_content=DAGwnkKreEs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
+                            </p>
                         </div>
-                    </div>
+                </div>
+
+                <div class="caixa">
+                    <img src="../fotos/Saotome.png" alt="atividade 2">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Fim da 2ª Guerra Mundial e Descolonização da África e da Ásia. <br>
+                                <b>Objetivo:</b> Escolher um país da África ou da Ásia que tenha se tornado independente entre 1940 e 1970 e responder as questões sobre o país escolhido. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade divertida e simples de se realizar. <br>
+                                <b>Habilidades:</b>  H30 - H39 - H40. <br>
+                                <b><a href="https://docs.google.com/spreadsheets/d/1uwELv0TnOw9JE8XUjJc9bgVBtHSi50Ewl0OpAK3SmoE/edit?usp=sharing">Planilha</a></b>
+                            </p>
+                        </div>
+                </div>
                 </div>
 
                 <div class="p1texto"><h2>3º Trimestre</h2></div>
