--- a/PORTF/humanas/index.html
+++ b/PORTF/humanas/index.html
@@ -71,22 +71,40 @@
                                 <b>Assunto:</b> Fim da 2ª Guerra Mundial e Descolonização da África e da Ásia. <br>
                                 <b>Objetivo:</b> Escolher um país da África ou da Ásia que tenha se tornado independente entre 1940 e 1970 e responder as questões sobre o país escolhido. <br>
                                 <b>Crítica Pessoal:</b> Uma atividade divertida e simples de se realizar. <br>
-                                <b>Habilidades:</b>  H30 - H39 - H40. <br>
+                                <b>Habilidades:</b> 
+                                <b>H30</b> – Analisar as lutas sociais e conquistas obtidas no que se refere às mudanças nas legislações ou nas políticas  públicas.
+                                <b>H39</b> – Relacionar o papel das instituições sociais às soluções para problemas políticos, econômicos, sociais e  ambientais no contexto da sociedade brasileira.
+                                <b>H40</b> – Analisar o processo de formação das instituições sociais e políticas, compreendendo seu papel na sociedade. 
+ <br>
                                 <b><a href="https://www.canva.com/design/DAGwnkKreEs/x07mkiQkUCfYXtxlhjGTfQ/edit?utm_content=DAGwnkKreEs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b>
                             </p>
                         </div>
                 </div>
 
                 <div class="caixa">
-                    <img src="../fotos/Saotome.png" alt="atividade 2">
+                    <img src="../fotos/PlanilhaHu.png" alt="atividade 2">
                         <div class="descricao">
                         <div class="atv"> <h4>Atividade 2</h4> </div>
                             <p>
-                                <b>Assunto:</b> Fim da 2ª Guerra Mundial e Descolonização da África e da Ásia. <br>
-                                <b>Objetivo:</b> Escolher um país da África ou da Ásia que tenha se tornado independente entre 1940 e 1970 e responder as questões sobre o país escolhido. <br>
-                                <b>Crítica Pessoal:</b> Uma atividade divertida e simples de se realizar. <br>
-                                <b>Habilidades:</b>  H30 - H39 - H40. <br>
+                                <b>Assunto:</b> 2ª Guerra Mundial. <br>
+                                <b>Objetivo:</b> A atividade consiste na criação de uma planilha com dados estatísticos. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade meio chata de se realizar. <br>
+                                <b>Habilidades:</b> Não Informadas. <br>
                                 <b><a href="https://docs.google.com/spreadsheets/d/1uwELv0TnOw9JE8XUjJc9bgVBtHSi50Ewl0OpAK3SmoE/edit?usp=sharing">Planilha</a></b>
+                            </p>
+                        </div>
+                </div>
+
+                <div class="caixa">
+                    <img src="../fotos/ecoHu.png" alt="atividade 3">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 3</h4> </div>
+                            <p>
+                                <b>Assunto:</b> UR fascismo a partir da obra Umberto Eco. <br>
+                                <b>Objetivo:</b> A atividade consiste as questões solicitadas se baseando no vídeo passado em sala. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade simples, sem comentários sobre. <br>
+                                <b>Habilidades:</b> Não Informadas. <br>
+                                <b><a href="https://docs.google.com/document/d/1LCNqkK7PXLTDDJEhcbCcQF4CqY5tYIubAFgSwg1pPwA/edit?usp=sharing">Docs</a></b>
                             </p>
                         </div>
                 </div>
