--- a/PORTF/natureza/index.html
+++ b/PORTF/natureza/index.html
@@ -99,9 +99,47 @@
                             <p>
                                 <b>Assunto:</b> Sistema imunológico e vacinas. <br>
                                 <b>Objetivo:</b> Criar um mapa mental individual sobre sistemas imunológico e vacinas e responder duas questões ENEM. <br>
-                                <b>Crítica Pessoal:</b> Uma atividade leve e simples de se fazer, acho o conteúdo bem legal, gostei de realizar a atividade. <br>
-                                <b>Habilidades:</b>  C4 - H23. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade leve e simples de se fazer. <br>
+                                <b>Habilidades:</b>  
+                                <b>C4</b> - Compreender o funcionamento dos  organismos vivos em  geral e o ser humano em  especial, considerando  suas relações com o  ambiente em que vivem,  abordando aspectos  físicos e socioculturais.
+                                <b>H23</b> - Formular propostas de alcance individual ou coletivo, utilizando como critérios a preservação e a promoção da saúde individual e coletiva. <br>
                                 <b><a href="https://www.canva.com/design/DAGwv9ZODY4/2HufQ7lAjzqZ1anilN6Nwg/edit?utm_content=DAGwv9ZODY4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva</a></b> <b><a href="https://docs.google.com/document/d/1l2zF-zqy8KgM8QmwimobbviTJ_oEnmEhGJumC3C2xPY/edit?usp=sharing">/ Docs</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/siteNa.png" alt="Atv 2">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 2</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Campo Magnético Terrestre e Auroras. <br>
+                                <b>Objetivo:</b> Criar um site sobre o assunto introduzido. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade leve de se fazer, acho o conteúdo bem legal, gostei de realizar a atividade. <br>
+                                <b>Habilidades:</b>  
+                                <b>C2</b> - Aplicar os conceitos fundamentais e estruturas procedimentais das Ciências da Natureza na explicação de fenômenos cotidianos, bem como dominar processos e práticas da investigação científica.
+                                <b>H6</b> - Compreender os conceitos relacionados à Física em seus diferentes ramos: Astronomia, Mecânica, Acústica, Óptica, Termologia, Calorimetria, Ondulatória Eletricidade, Magnetismo e Física Moderna e Nuclear.
+                                <b>H7</b> - Compreender os conceitos relacionados à Química nos seus diferentes ramos: Fisico-química, Química orgânica e Química Geral.
+                                <b>H9</b> - Explicar os conceitos de energia, matéria, vida e transformação para explicar fenômenos naturais e procedimentos tecnológicos. <br>
+                                <b><a href="https://www.canva.com/design/DAGvPryKNdw/mHeCmVgFjkxzk2gRB3O8vw/view?utm_content=DAGvPryKNdw&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Canva</a></b>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="caixa">
+                        <img src="../fotos/gloNa.png" alt="Atv 3">
+                        <div class="descricao">
+                        <div class="atv"> <h4>Atividade 3</h4> </div>
+                            <p>
+                                <b>Assunto:</b> Eletroquímica. <br>
+                                <b>Objetivo:</b> Criar um glossario sobre Eletroquímica. <br>
+                                <b>Crítica Pessoal:</b> Uma atividade extensa porem simples de realizar, achei ok. <br>
+                                <b>Habilidades:</b>  
+                                <b>C2</b> - Aplicar os conceitos fundamentais e estruturas procedimentais das Ciências da Natureza na explicação de fenômenos cotidianos, bem como dominar processos e práticas da investigação científica.
+                                <b>H6</b> - Compreender os conceitos relacionados à Física em seus diferentes ramos: Astronomia, Mecânica, Acústica, Óptica, Termologia, Calorimetria, Ondulatória Eletricidade, Magnetismo e Física Moderna e Nuclear.
+                                <b>H7</b> - Compreender os conceitos relacionados à Química nos seus diferentes ramos: Fisico-química, Química orgânica e Química Geral.
+                                <b>H9</b> - Explicar os conceitos de energia, matéria, vida e transformação para explicar fenômenos naturais e procedimentos tecnológicos. <br>
+                                <b><a href="https://www.canva.com/design/DAGr1PgF87E/fx06ppNBXDQ375arVBhi3Q/view?utm_content=DAGr1PgF87E&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Canva</a></b>
                             </p>
                         </div>
                     </div>
